# sequences

./: CMakeLists.txt  Testing.cpp  main.cpp
Sequences/: Sequence.cpp  Sequence.h  Sequence.tpp  Sequences.h
Sequences/Array/: ArraySequences.h
Sequences/Array/basic/: ArraySequence.cpp  ArraySequence.h  ArraySequence.tpp
Sequences/Array/capsule/: DynamicArray.cpp  DynamicArray.h  DynamicArray.tpp
Sequences/LinkedList/basic/: ListSequence.cpp  ListSequence.h  ListSequence.tpp
Sequences/LinkedList/capsule/: LinkedList.cpp  LinkedList.h  LinkedList.tpp  Node.cpp  Node.h  Node.tpp
Testing/: Testing.h  capsule.cpp  sequences.cpp  types.cpp
Types/: Set.h  Set.tpp  Types.h
Types/Deques/: Deque.h  Deque.tpp  Deques.h  Queue.hpp  Stack.hpp
old/: ImmutableArraySequence.cpp  ImmutableArraySequence.h  MutableArraySequence.cpp  MutableArraySequence.h
